--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "lotnisko-app",
   "version": "0.1.1",
   "private": true,
+  "homepage": "https://marcinpiekarniak.github.io/mapka4",
   "dependencies": {
     "d3-request": "^1.0.6",
     "deck.gl": "^6.0.2",
